[package]
name = "rabbitnut"
version = "1.0.0"
edition = "2024"
authors = ["Rabbit Company <info@rabbit-company.com>"]
description = "UPS monitoring daemon with automatic shutdown capabilities"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
chrono = "0.4"
log = "0.4"
fern = "0.7"
colored = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "rabbitnut"
path = "src/main.rs"